overflow - quick change todo: fix overflow-y

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -10,8 +10,7 @@ header {
 }
 
 body {
-  overflow: hidden;
-  min-height: 100dvh;
+  overflow-x: hidden;
 }
 
 @keyframes rotate {
